# project-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  project-example.sln
component/cpp-component/: .editorconfig  CMakeLists.txt  README.md  vcpkg.json
component/cpp-component/core/: main.cc
component/cpp-component/core/ModuleName0/: CMakeLists.txt  ModuleName0.cpp  ModuleName0.h
component/cpp-component/core/ModuleName1/: CMakeLists.txt  ModuleName1.cpp  ModuleName1.h
component/cpp-component/core/ModuleName2/: CMakeLists.txt  ModuleName2.cpp  ModuleName2.h  test.cc
component/cpp-component/core/ModuleName2/include/: SubModuleName1.h  SubModuleName2.h
component/cpp-component/core/ModuleName2/src/: SubModuleName2.cpp
component/cpp-component/tool/PyWrap/: CMakeLists.txt  PyWrap.cpp  PyWrap.h
component/python-component/: .gitignore  README.md
component/python-component/core/: main.py
component/python-component/core/ModuleName0/: __init__.py
component/python-component/core/ModuleName1/: ModuleName1.py  __init__.py
component/python-component/core/ModuleName2/: __init__.py
component/python-component/core/ModuleName2/SubModule0/: __init__.py
component/python-component/core/util/: __init__.py  util.py
core/: core.vcxproj  core.vcxproj.filters  main.cc  main.cpp
core/ModuleName0/: CMakeLists.txt  ModuleName0.h
core/ModuleName1/: CMakeLists.txt  ModuleName1.cpp  ModuleName1.h
core/ModuleName2/: CMakeLists.txt  ModuleName2.cpp  ModuleName2.h  test.cc  xmake.lua
core/ModuleName2/include/: SubModuleName1.h  SubModuleName2.h
core/ModuleName2/src/: SubModuleName1.cpp
core/PyWrap/: CMakeLists.txt  PyWrap.cpp
core/Pybind11Package/: CMakeLists.txt  Pybind11Package.cpp  Pybind11Package.h
core/PythonWrapper/: CMakeLists.txt  PythonWrapper.cpp  PythonWrapper.h
core/_ModuleName0/: ModuleName0.cpp  ModuleName0.h
meta/config/: main.ini
test/: test.cpp  test.vcxproj  test.vcxproj.filters
test/ModuleName1/: TestModuleName1.h
test/ModuleName2/: TestModuleName2.h
test/_ModuleName0/: TestModuleName0.h
tool/PyWrap/: CMakeLists.txt
